tests/method/tmethod.nim
discard """
  line: 6
  errormsg: "\'method\' needs a parameter that has an object type"
"""

method m(i: int): int =
  return 5
